    buffer involved.  Also, if the user aborts redraw the screen to
    remove these filenames.  [display.c]
    When narrowing a region, move whichever of mark and point is further
    through the file to the start of the next line if they are not at
    the start of a line.  So you get any line if you are in the middle
    of it (this already happens to whichever is first in the file).
    When rewidening, redraw the screen with the start of the narrowed
    region in the middle of the window, which makes it more obvious that the
    other text has returned.
    [region.c]

version.h
etc/uemacs.hlp
    Update to version GGR4.112

==========
word.c
    Fix the re-allocation need check for wbuf to cater for char vs.
    unicode_t sizes.

tcap.c
    Make curses.h and term.h inclusion conditional, so CygWin and MinGW
    builds can work.

display.c
efunc.h
    Allow mlforce() to take a variable number of args by changing
    mlwrite() to mlwrite_ap() and making both mlwrite() and mlforce()
    front ends to that.

bind.c
buffer.c
ebind.h
edef.h
efunc.h
estruct.h
exec.c
globals.c
main.c
     Make the key table dynamically assigned (so no longer a fixed
     maximum number of bindings) and enable key binding to user-defined
     procedures.
     Add checks for given buffer/procedure name being too long. Silent
     truncation to 14/15 characters could result in running an
     unintended procedure.
     Change "special" buffer names from *name* to /name, since the
     latter leaves more room for "name" and also cannot be generated
     from a filename.

etc/uemacs.rc
     Updated to use the new buffer-to-key binding implemented above.
     This runs the user-defined store-procedure methods directly.
     Entries from the 40 hard-wired store-macro names are no longer
     used.

main.c
     Fix -v/-V handling for consistency.

../CHANGES
../KNOWN_ISSUES
../README
version.h
etc/uemacs.hlp
    Update to version GGR4.113

==========